tests/baselines/reference/nonNull.errors.txt
tests/cases/conformance/types/nonNull/nonNull.ts(2,45): error TS2536: Type 'K' cannot be used to index type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(20,37): error TS2536: Type 'K' cannot be used to index type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(21,37): error TS2536: Type 'K' cannot be used to index type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(51,38): error TS2536: Type 'K' cannot be used to index type 'T'.
tests/cases/conformance/types/nonNull/nonNull.ts(67,8): error TS2345: Argument of type '{ a: null; }' is not assignable to parameter of type '{ a: {}; }'.
  Types of property 'a' are incompatible.
    Type 'null' is not assignable to type '{}'.
tests/cases/conformance/types/nonNull/nonNull.ts(71,11): error TS2345: Argument of type 'null' is not assignable to parameter of type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(73,14): error TS2345: Argument of type '5' is not assignable to parameter of type 'never'.
tests/cases/conformance/types/nonNull/nonNull.ts(76,8): error TS2345: Argument of type 'null' is not assignable to parameter of type '{}'.
tests/cases/conformance/types/nonNull/nonNull.ts(77,8): error TS2345: Argument of type 'undefined' is not assignable to parameter of type '{}'.
tests/cases/conformance/types/nonNull/nonNull.ts(81,14): error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
tests/cases/conformance/types/nonNull/nonNull.ts(82,19): error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
tests/cases/conformance/types/nonNull/nonNull.ts(83,15): error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
tests/cases/conformance/types/nonNull/nonNull.ts(92,11): error TS2322: Type 'T!' is not assignable to type 'T'.
tests/cases/conformance/types/nonNull/nonNull.ts(93,11): error TS2322: Type 'T' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(94,11): error TS90010: Type 'T!' is not assignable to type 'T!'. Two different types with this name exist, but they are unrelated.
tests/cases/conformance/types/nonNull/nonNull.ts(99,11): error TS2322: Type 'StrictMembers<T>' is not assignable to type 'T'.
  Type 'T[K]!' is not assignable to type 'T[K]'.
    Type 'T[K]!' is not assignable to type 'T[string]'.
tests/cases/conformance/types/nonNull/nonNull.ts(100,11): error TS2322: Type 'T' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(101,11): error TS2322: Type 'StrictMembers<T>' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(107,5): error TS2365: Operator '===' cannot be applied to types 'T' and 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(113,5): error TS2365: Operator '===' cannot be applied to types 'T' and 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(119,5): error TS2365: Operator '===' cannot be applied to types 'IdMapped<T>' and 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(120,5): error TS2365: Operator '===' cannot be applied to types 'Partial<T>' and 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(122,11): error TS2322: Type 'StrictMembers<T>' is not assignable to type 'IdMapped<T>'.
  Type 'T[K]!' is not assignable to type 'T[K]'.
    Type 'T[K]!' is not assignable to type 'T[string]'.
tests/cases/conformance/types/nonNull/nonNull.ts(123,11): error TS2322: Type 'StrictMembers<T>' is not assignable to type 'Partial<T>'.
  Type 'T[P]!' is not assignable to type 'T[P] | undefined'.
    Type 'T[P]!' is not assignable to type 'T[P]'.
      Type 'T[P]!' is not assignable to type 'T[string]'.
tests/cases/conformance/types/nonNull/nonNull.ts(136,7): error TS2322: Type '<T>() => StrictMembers<T>' is not assignable to type '<T>() => IdMapped<T>'.
  Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(139,7): error TS2322: Type '<T>() => StrictMembers<T>' is not assignable to type '<T>() => T'.
  Type 'StrictMembers<{}>' is not assignable to type 'T'.
tests/cases/conformance/types/nonNull/nonNull.ts(140,7): error TS2322: Type '<T>() => IdMapped<T>' is not assignable to type '<T>() => T'.
  Type 'IdMapped<{}>' is not assignable to type 'T'.
tests/cases/conformance/types/nonNull/nonNull.ts(143,7): error TS2322: Type '<T>() => Partial<T>' is not assignable to type '<T>() => StrictMembers<T>'.
  Type 'Partial<{}>' is not assignable to type 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(144,7): error TS2322: Type '<T>() => IdMapped<T>' is not assignable to type '<T>() => StrictMembers<T>'.
  Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(152,11): error TS2322: Type 'OptA' is not assignable to type 'A'.
  Types of property 'a' are incompatible.
    Type 'number | null' is not assignable to type 'number'.
      Type 'null' is not assignable to type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(154,11): error TS2322: Type 'OptA' is not assignable to type 'A'.
tests/cases/conformance/types/nonNull/nonNull.ts(166,11): error TS2322: Type 'OptA' is not assignable to type 'A'.
tests/cases/conformance/types/nonNull/nonNull.ts(168,11): error TS2322: Type 'OptA' is not assignable to type 'A'.
tests/cases/conformance/types/nonNull/nonNull.ts(180,11): error TS2322: Type 'OptA' is not assignable to type 'StrictMembers<A>'.
  Types of property 'a' are incompatible.
    Type 'number | null' is not assignable to type 'number'.
      Type 'null' is not assignable to type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(182,11): error TS2322: Type 'OptA' is not assignable to type 'StrictMembers<A>'.
tests/cases/conformance/types/nonNull/nonNull.ts(187,11): error TS2322: Type 'OptA' is not assignable to type 'StrictMembers<OptA>'.
  Types of property 'a' are incompatible.
    Type 'number | null' is not assignable to type 'number'.
      Type 'null' is not assignable to type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(189,11): error TS2322: Type 'OptA' is not assignable to type 'StrictMembers<OptA>'.


==== tests/cases/conformance/types/nonNull/nonNull.ts (37 errors) ====
    type NonNull<T> = T!
    type IndexNullable<T, K extends keyof T!> = T![K]
                                                ~~~~~
!!! error TS2536: Type 'K' cannot be used to index type 'T!'.
    type NonNullableMember<T, K extends keyof T> = T[K]!
    type StrictMembers<T> = { [K in keyof T]: T[K]! }
    
    type FlipFlop<T> = StrictMembers<Partial<StrictMembers<T>>>
    
    type HasKey<T, Key extends string> = (
      { [K in keyof T]: 'true' } &
      { [key: string]: 'false' }
    )[Key]
    
    type HasKindKey<T> = HasKey<T!, 'kind'>
    type MapHasKey<T, Key extends string> = {
        [K in keyof T]: HasKey<T[K]!, Key>
    }
    
    type KeyOfBang<T> = keyof T!
    
    type Strip1<T> = { [K in keyof T!]: T![K] }
                                        ~~~~~
!!! error TS2536: Type 'K' cannot be used to index type 'T!'.
    type Strip2<T> = { [K in keyof T!]: T![K]! }
                                        ~~~~~
!!! error TS2536: Type 'K' cannot be used to index type 'T!'.
    
    type Obj = {
        x: number|null,
        z: { kind: 'Just', value: string } |
           { kind: 'Nothing' } |
           undefined
    }
    
    type T1 = number!
    type T2 = (number|undefined)!
    type T3 = (number|null)!
    type T4 = NonNull<null|number>
    type T5 = NonNull<number|undefined>
    type T6 = NonNull<null>
    type T7 = NonNullableMember<Obj, 'x'>
    type T8 = IndexNullable<Obj|undefined, 'x'>
    type T9 = StrictMembers<Obj>
    type T10 = StrictMembers<Obj|undefined>
    type T11 = FlipFlop<Obj>
    type T12 = FlipFlop<number>
    type T13 = keyof (Obj|null)!
    type T14 = KeyOfBang<Obj|null>
    type T15 = Obj['z']!['kind']
    type T16 = MapHasKey<Obj, 'kind'>
    type T17 = Strip1<Obj>
    type T18 = Strip1<Obj|undefined>
    type T19 = Strip2<Obj|undefined>
    
    
    type Error1<T, K extends keyof T!> = T[K]
                                         ~~~~
!!! error TS2536: Type 'K' cannot be used to index type 'T'.
    
    let a: string | undefined | null | never;
    let b: typeof a!;
    type Assert<T> = T!;
    let c: Assert<typeof a>;
    
    declare function infer1<T>(x: T): T!;
    infer1(null! as (number | undefined));
    
    declare function infer2<T>(x: { a: T }): T!;
    infer2(null! as { a: number | null });
    infer2(null! as { a: null });
    
    declare function infer3<T>(x: { a: T! }): T;
    infer3(null! as { a: number });
    infer3(null! as { a: null });
           ~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ a: null; }' is not assignable to parameter of type '{ a: {}; }'.
!!! error TS2345:   Types of property 'a' are incompatible.
!!! error TS2345:     Type 'null' is not assignable to type '{}'.
    const res3: number|undefined = infer3(null! as { a: number });
    
    declare function infer4<T>(x: T, y: T!): void;
    infer4(5, null);
              ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'number'.
    infer4(5 as (number|null), 5);
    infer4(null, 5); // should be number
                 ~
!!! error TS2345: Argument of type '5' is not assignable to parameter of type 'never'.
    
    declare function infer5<T>(x: T!): T;
    infer5(null);
           ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type '{}'.
    infer5(undefined);
           ~~~~~~~~~
!!! error TS2345: Argument of type 'undefined' is not assignable to parameter of type '{}'.
    infer5(null as never);
    infer5(null as any);
    
    infer5<null>(null);
                 ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
    infer5<undefined>(null);
                      ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
    infer5<never>(null);
                  ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
    infer5<any>(null);
    
    declare function infer6<T>(x: Record<'x'|'y', T!>): void;
    infer6({ x: 1, y: 2 });
    infer6({ x: 1, y: 'string' });
    
    function assignability<T>(x: T, y: T!) {
        const a: T = x;
        const b: T = y;
              ~
!!! error TS2322: Type 'T!' is not assignable to type 'T'.
        const c: T! = x;
              ~
!!! error TS2322: Type 'T' is not assignable to type 'T!'.
        const d: T! = y;
              ~
!!! error TS90010: Type 'T!' is not assignable to type 'T!'. Two different types with this name exist, but they are unrelated.
    }
    
    function mappedAssignability<T>(x: T, y: StrictMembers<T>) {
        const a: T = x;
        const b: T = y;
              ~
!!! error TS2322: Type 'StrictMembers<T>' is not assignable to type 'T'.
!!! error TS2322:   Type 'T[K]!' is not assignable to type 'T[K]'.
!!! error TS2322:     Type 'T[K]!' is not assignable to type 'T[string]'.
        const c: T! = x;
              ~
!!! error TS2322: Type 'T' is not assignable to type 'T!'.
        const d: T! = y;
              ~
!!! error TS2322: Type 'StrictMembers<T>' is not assignable to type 'T!'.
    }
    
    function comparability<T>(x: T, y: T!) {
        x === x;
        y === y;
        x === y;
        ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'T' and 'T!'.
    }
    
    function mappedComparability<T>(x: T, y: StrictMembers<T>) {
        x === x;
        y === y;
        x === y;
        ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'T' and 'StrictMembers<T>'.
    }
    
    type IdMapped<T> = { [K in keyof T]: T[K] }
    
    function mappedRelations<T>(x: IdMapped<T>, y: Partial<T>, z: StrictMembers<T>) {
        x === z;
        ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'IdMapped<T>' and 'StrictMembers<T>'.
        y === z;
        ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'Partial<T>' and 'StrictMembers<T>'.
    
        const a: IdMapped<T> = z;
              ~
!!! error TS2322: Type 'StrictMembers<T>' is not assignable to type 'IdMapped<T>'.
!!! error TS2322:   Type 'T[K]!' is not assignable to type 'T[K]'.
!!! error TS2322:     Type 'T[K]!' is not assignable to type 'T[string]'.
        const b: Partial<T> = z;
              ~
!!! error TS2322: Type 'StrictMembers<T>' is not assignable to type 'Partial<T>'.
!!! error TS2322:   Type 'T[P]!' is not assignable to type 'T[P] | undefined'.
!!! error TS2322:     Type 'T[P]!' is not assignable to type 'T[P]'.
!!! error TS2322:       Type 'T[P]!' is not assignable to type 'T[string]'.
    }
    
    mappedRelations(null! as Obj, null! as Partial<Obj>, null! as StrictMembers<Obj>);
    mappedRelations(null! as StrictMembers<Obj>, null! as StrictMembers<Obj>, null! as StrictMembers<Obj>);
    
    declare const f: <T>() => Partial<T>;
    declare const g: <T>() => IdMapped<T>;
    declare const h: <T>() => T;
    declare const w: <T>() => StrictMembers<T>;
    
    // OK
    const fw: typeof f = w;
    const gw: typeof g = w;
          ~~
!!! error TS2322: Type '<T>() => StrictMembers<T>' is not assignable to type '<T>() => IdMapped<T>'.
!!! error TS2322:   Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T>'.
    
    // These should be the same
    const hw: typeof h = w;
          ~~
!!! error TS2322: Type '<T>() => StrictMembers<T>' is not assignable to type '<T>() => T'.
!!! error TS2322:   Type 'StrictMembers<{}>' is not assignable to type 'T'.
    const hg: typeof h = g;
          ~~
!!! error TS2322: Type '<T>() => IdMapped<T>' is not assignable to type '<T>() => T'.
!!! error TS2322:   Type 'IdMapped<{}>' is not assignable to type 'T'.
    
    // Errors
    const wf: typeof w = f;
          ~~
!!! error TS2322: Type '<T>() => Partial<T>' is not assignable to type '<T>() => StrictMembers<T>'.
!!! error TS2322:   Type 'Partial<{}>' is not assignable to type 'StrictMembers<T>'.
    const wg: typeof w = g;
          ~~
!!! error TS2322: Type '<T>() => IdMapped<T>' is not assignable to type '<T>() => StrictMembers<T>'.
!!! error TS2322:   Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T>'.
    const wh: typeof w = h;
    
    type A    = { a: number }
    type OptA = { a: number | null }
    
    function knownTypes(a: A, optA: OptA, bangA: A!, bangOptA: OptA!, strictA: StrictMembers<A>, strictOptA: StrictMembers<OptA>) {
        const a1: A = a;
        const a2: A = optA;
              ~~
!!! error TS2322: Type 'OptA' is not assignable to type 'A'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'number | null' is not assignable to type 'number'.
!!! error TS2322:       Type 'null' is not assignable to type 'number'.
        const a3: A = bangA;
        const a4: A = bangOptA;
              ~~
!!! error TS2322: Type 'OptA' is not assignable to type 'A'.
        const a5: A = strictA;
        const a6: A = strictOptA;
    
        const oa1: OptA = a;
        const oa2: OptA = optA;
        const oa3: OptA = bangA;
        const oa4: OptA = bangOptA;
        const oa5: OptA = strictA;
        const oa6: OptA = strictOptA;
    
        const ba1: A! = a;
        const ba2: A! = optA;
              ~~~
!!! error TS2322: Type 'OptA' is not assignable to type 'A'.
        const ba3: A! = bangA;
        const ba4: A! = bangOptA;
              ~~~
!!! error TS2322: Type 'OptA' is not assignable to type 'A'.
        const ba5: A! = strictA;
        const ba6: A! = strictOptA;
    
        const boa1: OptA! = a;
        const boa2: OptA! = optA;
        const boa3: OptA! = bangA;
        const boa4: OptA! = bangOptA;
        const boa5: OptA! = strictA;
        const boa6: OptA! = strictOptA;
    
        const sa1: StrictMembers<A> = a;
        const sa2: StrictMembers<A> = optA;
              ~~~
!!! error TS2322: Type 'OptA' is not assignable to type 'StrictMembers<A>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'number | null' is not assignable to type 'number'.
!!! error TS2322:       Type 'null' is not assignable to type 'number'.
        const sa3: StrictMembers<A> = bangA;
        const sa4: StrictMembers<A> = bangOptA;
              ~~~
!!! error TS2322: Type 'OptA' is not assignable to type 'StrictMembers<A>'.
        const sa5: StrictMembers<A> = strictA;
        const sa6: StrictMembers<A> = strictOptA;
    
        const soa1: StrictMembers<OptA> = a;
        const soa2: StrictMembers<OptA> = optA;
              ~~~~
!!! error TS2322: Type 'OptA' is not assignable to type 'StrictMembers<OptA>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'number | null' is not assignable to type 'number'.
!!! error TS2322:       Type 'null' is not assignable to type 'number'.
        const soa3: StrictMembers<OptA> = bangA;
        const soa4: StrictMembers<OptA> = bangOptA;
              ~~~~
!!! error TS2322: Type 'OptA' is not assignable to type 'StrictMembers<OptA>'.
        const soa5: StrictMembers<OptA> = strictA;
        const soa6: StrictMembers<OptA> = strictOptA;
    }
    